Complete Dom and Events

--- a/Dom/dom.html
+++ b/Dom/dom.html
@@ -26,13 +26,13 @@
   </style>
   <body>
     <!-- **********Intro to DOM code************ -->
-    <!-- <h1>hello</h1>
+    <h1>hello</h1>
     <p>Hello my name is dua</p>
     <p>I love the dom</p>
-    <p>Cats are the best</p> -->
+    <p>Cats are the best</p>
 
     <!-- ************getting an element by ID code*********** -->
-    <!-- <p>
+    <p>
       <span>I</span> am writing this off the top of my head! <span id="identifier">I</span> love writing JS and HTML
       <span>I</span> am named "Billy Bob"
     </p>
@@ -40,10 +40,10 @@
       <span>welcome to my site</span>
       <span>some span</span>
       <span>hey there</span>
-    </p> -->
+    </p>
 
     <!-- for the purpose of checking sub query -->
-    <!-- <div id="app">
+    <div id="app">
       <p>
         just <span>some</span> more random text of the <span>top of my</span>head
         <span>bla blah blah</span>
@@ -57,8 +57,9 @@
     </div>
     <div id="results">
       <p>I have changed: <span id="total"></span>Words</p>
-    </div> -->
-    <!-- <div>
+    </div>
+    -->
+    <div>
       <h1>Team members</h1>
       <ul id="members">
         <li>Jane</li>
@@ -67,13 +68,13 @@
         <li>Jisoo</li>
         <li>Jennie</li>
       </ul>
-    </div> -->
+    </div>
 
     <!-- ******************The Query Selector Code****************** -->
-    <!-- 
+
     <div>i should not be colored green</div>
     <div class="dummy">some <span>dummy</span> code</div>
-    <div class="dummy">some more <span>dummy</span> code</div> -->
+    <div class="dummy">some more <span>dummy</span> code</div>
 
     <!-- ***********ID and Classes code*********** -->
 
