Destructuring, Exception, Events and Template Literals completed

--- a/Events/events.html
+++ b/Events/events.html
@@ -8,17 +8,19 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Document</title>
     <style>
-      .backgroundDiv {
+      /* **********Introduction to events code ******** */
+      /* .backgroundDiv {
         background: orange;
         border: 1px solid black;
       }
       .green {
         background: green;
-      }
+      } */
     </style>
   </head>
   <body>
-    <div id="clicky">
+    <!-- **********Introduction to events code ********-->
+    <!-- <div id="clicky">
       <p>text here</p>
       <button id="btn">click here</button>
     </div>
@@ -29,7 +31,23 @@
         <li>item 2</li>
         <li>item 3</li>
       </ul>
-    </div>
-    <script src="IntroTOEvent.js"></script>
+    </div> -->
+    <!--********** Prevent Default code **********-->
+    <!-- <div id="div2">
+      <form id="myForm" method="post">
+        <input id="myInput" />
+        <button type="submit">Submit</button>
+      </form>
+    </div> -->
+    <!-- ************Key Events code************ -->
+    <!-- <div id="div3">
+      <p></p>
+      <textarea cols="30" rows="10"></textarea>
+    </div> -->
+    <!--************* load Event Code ****************-->
+
+    <!-- <script src="IntroTOEvent.js"></script> -->
+    <!-- <script src="PreventDefault.js"></script> -->
+    <!-- <script src="KeyEvents.js"></script> -->
   </body>
 </html>
